src/components/Contact/Contact.module.css
.contact__container {
    background: url('../../assets/layered-waves-haikei-reverse.svg');
    background-size: cover;
    margin-bottom: 0;
}

.contact__header {
    margin: var(--margin-24px);
    text-align: center; 
}

.contact__form {
    align-items: center;
    position: relative;
    display: flex;
    flex-direction: column;
    padding: 2rem;
    width: 50%;
}

.message__submit {
    border: none;
    background: var(--input-background);
    color: var(--secondary-color);
    font-size: var(--font-normal);
    margin-bottom: var(--margin-24px);
    padding: 1.5rem;
    transition: var(--transition);
    width: 80%;
}

.message__submit:hover {
    box-shadow: inset 0 0 10px #787878;
}
.none {
    display: none;
}

.contact__alternatives {
    color: var(--main-color);
    font-size: 3rem;
    text-align: center;
}

.contact__alternatives a {
    transition: var(--transition);
}

.contact__alternatives a:hover {
    color: var(--secondary-background);
}

@media (max-width: 1024px) {
    .contact__form,
    .message__submit {
        width: 100%;
    }
}

